welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: ';' expected but 'if' found.
  } if (biscuits > 2) {
    ^